Archive2/44/0e0f336124da0a/output
main.cpp: In function 'int main()':
main.cpp:9:17: error: 'remove_if' is not a member of 'std'
         s.erase(std::remove_if(s.begin(), s.end(), c), s.end());
                 ^
